Logic for Broadcast only channels with confetti on #celebrate - Added logic for Broadcast only channels that are configured on server side in config.json in ReadOnlyChannels - Add confetti to Broadcast channels when message start with #celebrate - Remove h scroll bar. Do a single transition pass to smooth transition out. Add logic to not see confetti in follow on messages. - Style error for when joining Broadcast only channel from More Channels modal. Refactor ReadOnly channels to have better logic for confetti. - Fix confetti not showing for new members to broadcast only channel. Fix console errors.

--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -19,6 +19,30 @@ body {
         padding-top: $announcement-bar-height;
     }
 }
+.confetti-wrapper {
+    position: fixed;
+
+    @keyframes confettiRain{
+        0%{
+            opacity: 1;
+            margin-top: -100vh;
+            margin-left: -200px
+        }
+        100%{
+            opacity: 1;
+            margin-top: 100vh;
+            margin-left: 200px
+        }
+    }
+
+    .confetti{
+        opacity: 0;
+        position: absolute;
+        width: 1rem;
+        height: 1.5rem;
+        animation: confettiRain 10s 1;
+    }
+}
 
 .sticky {
     background: $white;
